Refactor some code for Viva Framework